--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,15 +1,11 @@
-storage: {Eobard765ManfightClubLosses: '"12"', FunCaptianrexfightClubWins: '"1"',
-  xDcGamerfightClubLosses: '1', Destro717fightClubWins: '"1"', xSp4rkzfightClubLosses: '1',
-  topmiddle3: '2', topmiddle2: '6', Furnace_fightClubLosses: '1', SajiFilmsfightClubWins: '1',
-  bottomright3: '2', topmiddle1: '7', _WonderBat_fightClubLosses: '1', bottomright1: '9',
-  bottomright2: '8', Leo4RealfightClubLosses: '1', bottomleft2: '8', bottomleft3: '1',
-  Trilon_ShadowsfightClubLosses: '"4"', NoahAlfightClubWins: '"1"', TooFluffyfightClubWins: '29',
-  Its__BeefightClubLosses: '1', FunCaptianrexfightClubLosses: '"2"', CorruptRacerfightClubWins: '1',
-  God_Doesnt_ExistfightClubLosses: '"1"', God_Doesnt_ExistfightClubWins: '1', bottommiddle1: '7',
-  bottommiddle2: '2', CorruptRacerfightClubLosses: '1', bottommiddle3: '0', mythguy1226fightClubLosses: '1',
-  Eobard765ManfightClubWins: '"3"', xSp4rkzfightClubWins: '1', topleft1: '5', topleft2: '1',
-  topleft3: '1', mythguy1226fightClubWins: '4', WakandafightClubWins: '1', diamondvortex123fightClubLosses: '"1"',
-  bottomleft1: '0', xDcGamerfightClubWins: '1', TooFluffyfightClubLosses: '"2"', SS_HarleyQuinnfightClubLosses: '1',
-  NLMatimanfightClubLosses: '"1"', Its__BeefightClubWins: '1', SajiFilmsfightClubLosses: '1',
-  diamondvortex123fightClubWins: '"0"', topright3: '2', topright2: '8', WakandafightClubLosses: '1',
-  topright1: '2', Its__Beespouse: '"TooFluffy"'}
+storage: {mythguy1226fightClubLosses: '13', Leo4RealfightClubWins: '1', ThatCraftLifefightClubWins: '1',
+  LostInGalaxeh_fightClubWins: '1', KazutoKirigiafightClubLosses: '7', xDcGamer_MCUfightClubLosses: '10',
+  topleft1: '5', topleft2: '7', topleft3: '0', RozuufightClubLosses: '1', mythguy1226fightClubWins: '7',
+  topmiddle3: '2', topmiddle2: '4', SajiFilmsfightClubWins: '3', bottomleft1: '9',
+  bottomright3: '2', topmiddle1: '0', RozuufightClubWins: '2', xDcGamerfightClubWins: '1',
+  bottomright1: '8', bottomright2: '4', xDcGamer_MCUfightClubWins: '4', TooFluffyfightClubLosses: '3',
+  Leo4RealfightClubLosses: '1', bottomleft2: '9', bottomleft3: '0', septer101fightClubLosses: '1',
+  ThatCraftLifefightClubLosses: '4', TooFluffyfightClubWins: '15', SajiFilmsfightClubLosses: '2',
+  LostInGalaxeh_fightClubLosses: '3', GingastriesfightClubLosses: '1', topright3: '2',
+  topright2: '8', topright1: '7', septer101fightClubWins: '10', bottommiddle1: '9',
+  KazutoKirigiafightClubWins: '1', bottommiddle2: '5', bottommiddle3: '2'}
