--- a/Multiverse-Core/worlds.yml
+++ b/Multiverse-Core/worlds.yml
@@ -2483,11 +2483,11 @@ worlds:
     keepSpawnInMemory: 'true'
     spawnLocation:
       ==: MVSpawnLocation
-      x: 7.5
-      y: 39.0
-      z: 26.5
-      pitch: 1.7492608
-      yaw: -180.70142
+      x: -16.44102724035612
+      y: 32.0
+      z: -6.3891193640268185
+      pitch: 17.884857
+      yaw: -151.28505
     autoLoad: 'true'
     bedRespawn: 'true'
     worldBlacklist: []
