--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -6712,6 +6712,12 @@ groups:
       elytralobby:
         permissions:
         - essentials.build.interact.*
+      turfwars:
+        permissions:
+        - essentials.build.*
+        - essentials.build.interact.*
+        - essentials.build.interact
+        - essentials.interact
   commonherotraits:
     inheritance:
     - mortal
@@ -10033,7 +10039,7 @@ users:
     group:
     - spidermanpeterparker
     options:
-      name: xDcGamer
+      name: xDcGamer_MCU
     worlds:
       greenfield:
         permissions: []
@@ -10153,6 +10159,8 @@ users:
   09b03203-58f5-411b-a18a-0ba5ae6477cd:
     options:
       name: _Zayr_
+    group:
+    - ultramanearththree
   09eaad22-f91f-476e-b10d-9be402f7efe3:
     group:
     - blackflash
@@ -10272,7 +10280,7 @@ users:
     - ultron
   127d5b95-016a-40b2-ac5e-330772023c39:
     options:
-      name: AzraelDC
+      name: Merliiinn
     group:
     - blacklanternsuperman
   12cea9e9-4d1a-4591-9b6a-1de786e59c6f:
@@ -10526,7 +10534,6 @@ users:
         permissions: []
     permissions:
     - -ch.alias.gc
-    - -chatcontrol.chat.format.color
     - is.secretary
     - essentials.warps.office
     - essentials.warps.officeadmin
@@ -10719,7 +10726,7 @@ users:
     options:
       name: SajiFilms
     group:
-    - blackracerwilliewalker
+    - martianmanhunter
     worlds:
       garbageworld:
         permissions:
@@ -10827,6 +10834,11 @@ users:
       name: ThatCraftLife
     permissions:
     - multiverse.access.underworld
+    worlds:
+      greenfield:
+        permissions: []
+      fightclub:
+        permissions: []
   475f54cd-419f-45f8-8f23-6bc2ac323dd7:
     options:
       name: Katz4u
@@ -10886,7 +10898,7 @@ users:
     options:
       name: _PyroPlayz_
     group:
-    - acceleratedman
+    - mortal
   4c95642b-a587-472c-98a2-12f01a2927c1:
     options:
       name: Nick_A_Naut
@@ -10924,7 +10936,7 @@ users:
       name: ItsaSteampunk_
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
     group:
-    - psylocke
+    - supergirl
     options:
       name: Rozuu
     permissions:
@@ -10987,6 +10999,9 @@ users:
     - powergirl
     options:
       name: YalineVermont
+    worlds:
+      greenfield:
+        permissions: []
   58f6edb2-2b35-4c88-a570-21f0ee858cc1:
     options:
       name: Rarecraft
@@ -11037,9 +11052,12 @@ users:
       name: noahdude60
   5bfa6299-b245-454e-a31c-22090f6fc812:
     group:
-    - antman
+    - atom
     options:
       name: MZBgamer
+    worlds:
+      greenfield:
+        permissions: []
   5c51f45c-2794-46ae-8c92-0f14c1b2ab91:
     options:
       name: NerdSwag
@@ -11156,7 +11174,7 @@ users:
       name: xsuperkidsx
   6823f174-6db7-40f4-9575-10d9cefaafb0:
     group:
-    - thefourthdoctor
+    - doctorstrange
     options:
       name: Alonedarkassasin
   6882e3f8-3786-4f60-8ed0-8c2a89332172:
@@ -11450,7 +11468,7 @@ users:
       name: GameTechnologies
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
     group:
-    - blackracerwilliewalker
+    - blacklanternmartianmanhunter
     options:
       name: _Vigilance_
     worlds:
@@ -12428,7 +12446,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - blackracerwilliewalker
+    - blackflash
     options:
       name: nevsfam
     permissions: []
@@ -13411,7 +13429,7 @@ users:
       name: b4nife
   3ab6a84f-42d2-4745-a508-5dc6a371d804:
     group:
-    - supergirl
+    - ichigokurosaki
     options:
       name: _iiTzMeShadow_
   4568598f-2153-429c-b982-8e3dab271da7:
@@ -13808,9 +13826,9 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - deadpool
+    - flashbarryallen
     options:
-      name: CorruptRacer
+      name: KazutoKirigia
     permissions: []
     worlds:
       fightclub:
@@ -13900,7 +13918,7 @@ users:
       name: _JohnFTW_
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group:
-    - silversurfer
+    - hephaestus
     options:
       name: Bubbatruk
     permissions:
@@ -14262,7 +14280,7 @@ users:
       name: ii_Ashura
   ae107f34-4831-49c2-bfe8-0974342077e0:
     group:
-    - darthrevan
+    - flashwallywest
     options:
       name: FunCaptianrex
     permissions:
@@ -14379,7 +14397,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - spidermanpeterparker
+    - flashwallywest
     options:
       name: nightghost2
     permissions:
@@ -14402,11 +14420,10 @@ users:
       name: MichaelPotter02
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group:
-    - doctormanhattan
+    - lukecage
     options:
       name: TooFluffy
-    permissions:
-    - -ch.alias.gc
+    permissions: []
     worlds:
       fightclub:
         permissions: []
@@ -14492,7 +14509,7 @@ users:
       name: ccv3
   8cb964f5-d345-4a65-8811-cb3b0c11b51b:
     group:
-    - ninjagocoleghost
+    - mewtwo
     options:
       name: Vengeance007
     permissions: []
@@ -14597,7 +14614,7 @@ users:
     group:
     - blackracerwilliewalker
     options:
-      name: _Gamit_
+      name: _Epiphany_
   998def02-6a10-49b3-a639-3dfb773ffdab:
     group:
     - blacklanterndeathstormraymondrusch
@@ -14640,10 +14657,13 @@ users:
       name: OhioNick666
   ee8fde98-a0f5-43a4-8b3b-19c70c120fee:
     group:
-    - sentry
+    - blackracerwilliewalker
     options:
       name: ZanyJake5
     permissions: []
+    worlds:
+      greenfield:
+        permissions: []
   6637bc83-e598-4f5b-97d2-14918ff01fdf:
     group:
     - godspeed
@@ -14672,9 +14692,12 @@ users:
       name: DaLegen27
   aad75362-b4ee-434e-b676-65c06de2996f:
     group:
-    - mortal
+    - whitelanterntelosusr
     options:
       name: xXRestone27Xx
+    worlds:
+      greenfield:
+        permissions: []
   f35e2b84-c0da-41a8-9375-6c88dd33b714:
     group:
     - goku
@@ -14692,10 +14715,13 @@ users:
       name: Silent_SilentF
   23e1e8e3-0f64-40c7-b369-183dcd7525b3:
     group:
-    - flashbarryallen
+    - savitar
     options:
       name: DjayDS164938
     permissions: []
+    worlds:
+      greenfield:
+        permissions: []
   b9843444-b18e-4bad-8f63-0bf9f2172c88:
     group:
     - blackspiderman
@@ -15034,7 +15060,7 @@ users:
       name: Pursival
   abd26dcf-5710-466e-a662-d4a06fe1b40e:
     group:
-    - reverseflasheobardthawne
+    - darkseid
     options:
       name: OMGitzAlyssa_
   40477199-9afc-4187-acc8-d3d6176b32ba:
@@ -15136,7 +15162,7 @@ users:
     permissions: []
   5f238a5f-3586-4e83-9338-c3533b5cf96f:
     group:
-    - blacklanternmartianmanhunter
+    - superboykonel
     options:
       name: DemonWolf_
     permissions: []
@@ -15347,7 +15373,7 @@ users:
       name: Chromedist
   67a6d658-fe55-41e6-89d2-78e5ace804e9:
     group:
-    - greenarrow
+    - onepunchman
     options:
       name: KennyKenshiKoala
   f0d32a45-3a55-451f-8502-8bbcff907507:
@@ -15411,11 +15437,14 @@ users:
       name: cman5
   24d4ccf6-91f0-4d37-b132-66dbc89228e1:
     group:
-    - missmartian
+    - supergirl
     options:
       name: Peyton84206
     permissions:
     - multiverse.access.underworld
+    worlds:
+      greenfield:
+        permissions: []
   176808de-428a-47f2-acb0-bd5ca1a1b6e0:
     group:
     - mortal
@@ -15836,7 +15865,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - harrypotter
+    - darthmaul
     options:
       name: mythguy1226
     permissions:
@@ -15865,6 +15894,8 @@ users:
       infiniteparkour:
         permissions:
         - essentials.build.*
+      fightclub:
+        permissions: []
   144fabad-e9ac-46f3-aa7d-aef5fbe24240:
     group:
     - mortal
@@ -15984,7 +16015,7 @@ users:
       name: CookieGod21
   1ab35d18-25a8-423a-ad54-c4d973a8fc00:
     group:
-    - blackadam
+    - greenarrow
     options:
       name: MegaGreninja25
   8985f847-87f0-4d98-868e-e7a56f168697:
@@ -16054,7 +16085,7 @@ users:
     permissions: []
   45bcb3ec-1dcb-41fe-ac6e-dac3c41f3ea7:
     group:
-    - mewtwo
+    - infinitysilversurfer
     options:
       name: BlueWolf4Life
     permissions: []
@@ -16325,7 +16356,7 @@ users:
       name: NoFearKing
   d39ddc52-5fdb-484e-8e0c-f538e7982bee:
     group:
-    - artemisyoungjustice
+    - raven
     options:
       name: Eyemakid
     worlds:
@@ -16383,7 +16414,7 @@ users:
       name: XxBloodShedxX
   14583bba-da31-48ef-97e0-0043479ed159:
     group:
-    - superman
+    - blackracerwilliewalker
     options:
       name: Pogonip
     permissions: []
@@ -16433,12 +16464,12 @@ users:
       name: james3403
   0820aeab-16d0-4045-917e-5afb1f579913:
     group:
-    - captainamericasteverogers
+    - howardtheduck
     options:
       name: AndonPickles
   34b177be-e3f5-4795-8007-bdb9b9a7f41e:
     group:
-    - infinitythanos
+    - thehumantorch
     options:
       name: DrHERO1
   ab873698-78fa-4776-a17b-1a8702d32955:
@@ -16824,12 +16855,12 @@ users:
       name: ProLanerSk
   51d14399-0cee-4fb8-a7e5-53cd5b8a3859:
     group:
-    - bluelanternbarryallen
+    - silversurfer
     options:
       name: Kagerama
   a90bff3f-1f10-4734-9f90-2dfb0660b66e:
     group:
-    - impulsebartallen
+    - infinitysilversurfer
     options:
       name: singheart
     worlds:
@@ -16931,7 +16962,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - spidermanpeterparker
+    - parallaxentity
     options:
       name: HerpaDerp10000
     permissions:
@@ -17188,7 +17219,7 @@ users:
       name: half_face
   4513d2fb-206a-4bb2-8119-86519d8a9475:
     group:
-    - ironmanmkxliii
+    - ultron
     options:
       name: gavingamer2
   70cd30df-71a5-4bba-bc0c-263e6ea5f6d6:
@@ -17302,9 +17333,10 @@ users:
     - doctorstrange
     options:
       name: Freja15k
+    permissions: []
   3a3ba1c8-7fa6-4e4c-832b-e46a7cda2da6:
     group:
-    - superman
+    - carnage
     worlds:
       greenfield:
         permissions: []
@@ -17343,6 +17375,9 @@ users:
     - carnage
     options:
       name: Gingastries
+    worlds:
+      fightclub:
+        permissions: []
   04843c72-62ef-4a65-8d09-152cd3b42fcb:
     group:
     - beerus
@@ -17365,7 +17400,7 @@ users:
         permissions: []
   0e0762f9-f266-4545-89a9-019e41f92e5a:
     group:
-    - ghostriderjohnnyblaze
+    - jessequick
     worlds:
       fightclub:
         permissions: []
@@ -17409,7 +17444,7 @@ users:
       name: SacabooCDE
   dccc293a-5cb1-45e8-a895-a6301ca2960e:
     group:
-    - harrypotter
+    - onepunchman
     worlds:
       fightclub:
         permissions: []
@@ -17429,14 +17464,14 @@ users:
       name: ZomboViolin
   3712728a-b870-4d4a-b61f-2e4626d8bf00:
     group:
-    - mewtwo
+    - beastboy
     permissions:
     - multiverse.access.underworld
     options:
       name: lukaalves
   de40ddae-14b6-415b-93fb-a3a309128661:
     group:
-    - enderman
+    - silversurfer
     permissions:
     - multiverse.access.underworld
     options:
@@ -17446,7 +17481,7 @@ users:
         permissions: []
   7f513768-1d21-45f8-bb54-9d0c9a8b7664:
     group:
-    - flashwalterwest
+    - flashwallywest
     options:
       name: NLMatiman
     worlds:
@@ -17502,6 +17537,8 @@ users:
     worlds:
       fightclub:
         permissions: []
+      greenfield:
+        permissions: []
   7e2fdeb2-81a6-4125-9d02-a4e16db98f2d:
     group:
     - quarantine
@@ -17512,7 +17549,7 @@ users:
     - -quarantine.onjoin
   e607734b-815e-4313-ae9c-141d2269fe07:
     group:
-    - blackwidow
+    - vixen
     worlds:
       fightclub:
         permissions: []
@@ -17529,6 +17566,85 @@ users:
   94a0bf05-fdef-4eb0-9277-d20a95068d15:
     group:
     - flashbarryallen
+    options:
+      name: Awesome_Adi
+  1de949b5-ea26-4290-a6ce-980fcc37d539:
+    group:
+    - flashbarryallen
+    options:
+      name: xNataliex
+  ae9341b2-c58a-4c51-8ada-c9ca4d47aad4:
+    group:
+    - savitar
+    options:
+      name: SamTDE
+    worlds:
+      greenfield:
+        permissions: []
+  7325153d-fe10-4579-b73e-e30c3b18a26f:
+    group:
+    - blackpanther
+    options:
+      name: LavaVillainMC
+  108b7046-ddfb-40c1-a3a3-612b055d466b:
+    group:
+    - infinitysilversurfer
+    options:
+      name: gugumarques
+    worlds:
+      fightclub:
+        permissions: []
+  4aba26b7-219a-4f91-ae94-83d66acddfe6:
+    group:
+    - mortal
+    options:
+      name: Havocc696969
+  e4fd9738-776e-4ba2-8bfb-fe89bd3f6b83:
+    group:
+    - thor
+    options:
+      name: MaddDog02
+  c967fde2-03fb-4ed0-9997-b7d41a2c1030:
+    group:
+    - mortal
+    options:
+      name: MineCraftManBill
+  5beb0597-3e22-4d3c-9ffc-faea6a2b1c54:
+    group:
+    - batman
+    options:
+      name: RedstoneMonkey
+  b922d7e0-c395-4224-9246-e41c0ef63cc9:
+    group:
+    - goku
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: mintwhip
+  955451bc-4605-4d9c-8faf-2257e6d03453:
+    group:
+    - bluelanternbarryallen
+    options:
+      name: VigorosoSiren
+  c5ec1a0d-c2d1-43f4-94fd-22edfe699269:
+    group:
+    - flashwallywest
+    options:
+      name: M_P_Ntheyoutber
+  0e495728-d2b7-40f3-9796-bc78b0ed0534:
+    group:
+    - acceleratedman
+    options:
+      name: ushydone
+  30f52bfb-fd3a-4aa7-8968-88e7ec97064b:
+    group:
+    - thor
+    options:
+      name: ApolloWolf14
+  77274feb-ee74-4b41-be1e-097c2afd9213:
+    group:
+    - genos
 worlds:
   checkers:
     inheritance:
