--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -13,21 +13,8 @@ groups:
          - ch.alias.jump2
          - ch.alias.jump3
          - ch.alias.jump4
-         - ch.alias.jump5
-         - ch.alias.jump6
-         - ch.alias.jump7
-         - ch.alias.run0
-         - ch.alias.run1
-         - ch.alias.run2
-         - ch.alias.run3
-         - ch.alias.run4
-         - ch.alias.haste0
-         - ch.alias.haste1
-         - -magic.cast.spellshop
          - magic.wand.use
-         - magic.cast
-         - magic.cast.*
-         - magic.use.yodaforce
+         - magic.cast.yodaforce
   hippolytadc:
     inheritance:
     - commonherotraits
