--- a/WorldGuard/worlds/office/regions.yml
+++ b/WorldGuard/worlds/office/regions.yml
@@ -20,7 +20,7 @@ regions:
         priority: 10
     __global__:
         members: {}
-        flags: {pvp: deny}
+        flags: {feed-amount: 1, feed-delay: 1, pvp: deny}
         owners: {}
         type: global
         priority: 0
