--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,20 +1,20 @@
 groups:
-  yoda: 
-     inheritance: 
-     - commonherotraits 
-     options: 
-       prefix: '&2Y&ao&2d&aa' 
-       suffix: '&a' 
-     worlds: 
-       survival: 
-         permissions: 
-         - ch.alias.jump0
-         - ch.alias.jump1
-         - ch.alias.jump2
-         - ch.alias.jump3
-         - ch.alias.jump4
-         - magic.wand.use
-         - magic.cast.yodaforce
+  yoda:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2Y&ao&2d&aa'
+      suffix: '&a'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - magic.wand.use
+        - magic.cast.yodaforce
   hippolytadc:
     inheritance:
     - commonherotraits
@@ -15901,7 +15901,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - darthmaul
+    - harrypotter
     options:
       name: mythguy1226
     permissions:
