--- a/Magic/wands/harryswand2.yml
+++ b/Magic/wands/harryswand2.yml
@@ -4,20 +4,9 @@ harryswand2:
   effect_color: 274d74a0f611,5d8c5d622d3f,d775451acad6
   page: 0
   spells:
-  - missile
-  - push
-  - torture
-  - pull
-  - flare
-  - lift
-  - fling
-  - fire|3
-  - petrify|3
-  - disarm|3
-  - reflect|4
-  - blink|6
-  - wound|3
-  - kill
+  - expelliarmus
+  - crucio
+  - rictusempra
   version: 5
   spell_inventory:
     flare: 5
