--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -50,6 +50,7 @@ groups:
     worlds:
       survival:
         permissions:
+        - magic.cast
         - magic.wand.use
         - magic.cast.rictusempra
         - magic.cast.expelliarmus
@@ -12338,7 +12339,7 @@ users:
       name: nathan_04
   d741dd01-8fac-496e-adc6-f88e1087e57c:
     group:
-    - mortal
+    - harrypotter
     options:
       name: lissakitty
     permissions:
@@ -14426,7 +14427,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - kidflashwallywest
+    - zion
     options:
       name: nightghost2
     permissions:
@@ -15473,7 +15474,7 @@ users:
       name: cman5
   24d4ccf6-91f0-4d37-b132-66dbc89228e1:
     group:
-    - jessequick
+    - missmartian
     options:
       name: Peyton84206
     permissions:
@@ -15634,6 +15635,9 @@ users:
         permissions: []
       fightclub:
         permissions: []
+      alpha:
+        permissions:
+        - op
   69a9802f-3ccf-4a91-b2b7-2fc8b9cf86ba:
     group:
     - blacklanterndeathstormraymondrusch
@@ -15901,7 +15905,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - harrypotter
+    - mortal
     options:
       name: mythguy1226
     permissions:
