--- a/Citizens/saves.yml
+++ b/Citizens/saves.yml
@@ -244,7 +244,7 @@ npc:
       owner:
         owner: RoboCode
         uuid: 87fb3c6c-5ff6-4bf6-b326-992c6137ea12
-    traitnames: type,inventory,location,mounttrait,gravity,spawned,owner
+    traitnames: type,inventory,location,mounttrait,spawned,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -476,7 +476,7 @@ npc:
       location:
         world: newminigamehub
         x: '1.3'
-        y: '-3.055690814875E8'
+        y: '-3.056334401102E8'
         z: '23.4359'
         yaw: '-270.14984130859375'
         pitch: '0.0'
@@ -508,7 +508,7 @@ npc:
       location:
         world: newminigamehub
         x: '1.4536'
-        y: '-3.042888572762E8'
+        y: '-3.043532158989E8'
         z: '20.0746'
         yaw: '-273.7496337890625'
         pitch: '0.0'
@@ -533,7 +533,7 @@ npc:
       location:
         world: newminigamehub
         x: '71.4505'
-        y: '-3.042888512762E8'
+        y: '-3.043532098989E8'
         z: '10.5934'
         yaw: '268.80029296875'
         pitch: '0.0'
