--- a/Magic/wands/harryswand.yml
+++ b/Magic/wands/harryswand.yml
@@ -1,5 +1,5 @@
 harryswand:
-  active_spell: kill
+  active_spell: disarm
   mana: 600.0
   effect_color: 274d74a0f611,5d8c5d622d3f,d775451acad6
   page: 0
@@ -17,7 +17,6 @@ harryswand:
   - reflect|4
   - blink|6
   - wound|3
-  - kill
   version: 5
   spell_inventory:
     flare: 5
@@ -25,13 +24,12 @@ harryswand:
     blink: 31
     fling: 7
     disarm: 33
-    kill: 2
     push: 1
     pull: 4
     torture: 3
     reflect: 29
     wound: 32
-    missile: 30
+    missile: 2
     lift: 6
     fire: 34
   mana_regenartion_boost: 20.0
