--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,37 @@
 groups:
+  dumbledore: 
+     inheritance: 
+     - commonherotraits 
+     options: 
+       prefix: '&5Dum&dbl&5edo&dre' 
+       suffix: '&d' 
+     worlds: 
+       survival: 
+         permissions: 
+         - magic.cast 
+         - magic.wand.use 
+         - magic.cast.missile 
+         - magic.cast.push 
+         - magic.cast.pull
+         - magic.cast.flare
+         - magic.cast.lift
+         - magic.cast.fling
+         - magic.cast.fire
+         - magic.cast.petrify
+         - magic.cast.disarm
+         - magic.cast.reflect
+         - magic.cast.blink
+         - magic.cast.heal
+         - magic.cast.boom
+         - magic.cast.blind
+         - magic.cast.counterspell
+         - magic.cast.entangle
+         - magic.cast.flashbang
+         - magic.cast.frost
+         - magic.cast.flamethrower
+         - magic.cast.stream
+         - magic.use.elderwand 
+
   yoda:
     inheritance:
     - commonherotraits
