--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -46,16 +46,12 @@ groups:
         - ch.alias.run4
         - ch.alias.run5
         - ch.alias.run6
+        - ch.alias.run7
         - ch.alias.haste0
         - ch.alias.haste1
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
-        - ch.alias.haste5
-        - ch.alias.haste6
-        - ch.alias.haste7
-        - ch.alias.haste8
-        - ch.alias.haste9
   harrypotter:
     inheritance:
     - commonherotraits
