--- a/Magic/wands/elderwand.yml
+++ b/Magic/wands/elderwand.yml
@@ -4,51 +4,16 @@ elderwand:
    effect_color: 274d74a0f611,5d8c5d622d3f,d775451acad6 
    page: 0 
    spells: 
-   - missile 
-   - push 
-   - torture 
-   - pull 
-   - flare 
-   - lift 
-   - fling 
-   - fire|3 
-   - petrify|3 
    - disarm|3 
    - reflect|4 
    - blink|6 
-   - heal 
-   - boom|3
-   - blind
-   - counterspell
-   - entangle
-   - flashbang
-   - frost
    - flamethrower
-   - stream
    version: 5 
    spell_inventory: 
-     flare: 5 
-     petrify: 0 
-     blink: 31 
-     fling: 7 
-     disarm: 2  
-     push: 1 
-     pull: 4 
-     torture: 3 
-     reflect: 29 
-     wound: 32 
-     missile: 30 
-     lift: 6 
-     fire: 34
-     heal: 35
-     boom: 36
-     blind: 37
-     counterspell: 38
-     entangle: 39
-     flashbang: 40
-     frost: 41
-     flamethrower: 42
-     stream: 43
+     disarm: 0
+     reflect: 1
+     blink: 2
+     flmaethrower: 3
    mana_regenartion_boost: 20.0 
    right_click: inventory 
    mana_regenartion: 20.0 
