--- a/Magic/wands/elderwand.yml
+++ b/Magic/wands/elderwand.yml
@@ -1,13 +1,13 @@
 elderwand: 
-   active_spell: disarm 
+   active_spell: expelliarmus 
    mana: 600.0 
    effect_color: 274d74a0f611,5d8c5d622d3f,d775451acad6 
    page: 0 
    spells: 
-   - disarm|3 
-   - reflect|4 
-   - blink|6 
-   - flamethrower
+   - expelliarmus|3 
+   - protego|4 
+   - apparate|6 
+   - firestorm
    version: 5 
    spell_inventory: 
      disarm: 0
