--- a/Magic/messages.yml
+++ b/Magic/messages.yml
@@ -36,78 +36,18 @@
 #     description: Zap somebody!
 
 spells:
-  push:
-    name: Rictusempra
-    description: Push your opponents back a little bit
-  disarm:
+  expelliarmus:
     name: Expelliarmus
     description: Disarm your opponent
-  kill:
-    name: Avadakedavra
-    description: Killing Curse... enough said
-  torture:
-    name: Crucio
-    description: Tortures your opponents
-  pull:
-    name: Accio
-    description: Pulls things towards you
-  fling:
-    name: Ascendio
-    description: Sends you flying in the direction you cast
-  flare:
-    name: Periculum
-    description: Shoots flares
-  stun:
-    name: Stupefy
-    description: Stuns your opponent
-  reflect:
+  protego:
     name: Protego
     description: Blocks incoming projectiles
-  wound:
-    name: Sectumsempra
-    description: Wounds your target
-  petrify:
-    name: Petrificus Totalus
-    description: Petrifies your target
-  lift:
-    name: Levicorpus
-    description: Lifts your opponent into the air
-  fire:
-    name: Incendio
-    description: Lights fire from a distance
-  fireball:
-    name: Confringo
-    description: Shoots a fireball out of your wand
-  blink:
+  apparate:
     name: Apparate
     description: Teleport where you point your wand
-  heal:
-    name: Episkey
-    description: Heal yourself or others
-  boom:
-    name: Bombarda
-    description: Creates a small explosion
-  blind:
-    name: Conjunctivitis
-    description: Blinds your target
-  counterspell:
-    name: Finite Incantatum
-    description: Counters other spells
-  entangle:
-    name: Incarcerous
-    description: Bind your target in ropes
-  flashbang:
-    name: Lumos Solem
-    description: Create a very bright light
-  frost:
-    name: Glacius
-    description: Freeze others and water
-  flamethrower:
+  firestorm:
     name: Firestorm
     description: Throw flames
-  stream:
-    name: Aqua Eructo
-    description: Spray a stream of water
   forcepush:
     name: Force Push
     description: Use the force to push your enemies backwards
