--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10,10 +10,10 @@ groups:
          permissions: 
          - magic.cast 
          - magic.wand.use 
-         - magic.cast.disarm
-         - magic.cast.reflect
-         - magic.cast.blink
-         - magic.cast.flamethrower
+         - magic.cast.expelliarmus
+         - magic.cast.protego
+         - magic.cast.apparate
+         - magic.cast.firestorm
          - magic.use.elderwand 
 
   yoda:
