--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -30,8 +30,10 @@ groups:
         - ch.alias.jump2
         - ch.alias.jump3
         - ch.alias.jump4
-        - magic.wand.use
-        - magic.cast.yodaforce
+        - magic.use.yodaforce
+        - magic.cast.forcepush
+        - magic.cast.forcepull
+        - magic.cast.forcegrip
   hippolytadc:
     inheritance:
     - commonherotraits
